--- a/src/main/resources/templates/profesor-menu.html
+++ b/src/main/resources/templates/profesor-menu.html
@@ -25,7 +25,7 @@
     <div class="flex-grow p-5" id="content">
         <div id="defecto" class="info">
             <h2 class="text-2xl font-bold text-gray-300"> Sistema KimenFen</h2>
-            <h1 class="w-full  mb-4 text-gray-300">UCN todos los derechos reservados 2024@</h1>
+            <h1 class="w-full  mb-4 text-gray-300">© 2024 KimenFen. Todos los derechos reservados.</h1>
         </div>
     </div>
 </div>
