--- a/src/main/resources/templates/lista-alumnos.html
+++ b/src/main/resources/templates/lista-alumnos.html
@@ -32,19 +32,16 @@
             <td class="border border-black" th:text="${alumno.direccion}"></td>
             <td class="border border-black" th:text="${alumno.curso}"></td>
             <td class="bg-yellow-800 w-full">
-                <a class="text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1" th:if="${rol == 'ROLE_ADMIN'}" href="#" th:attr="data-id=${alumno.id}">Editar</a>
+                <a class="text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1 editar-alumno" th:if="${rol == 'ROLE_ADMIN'}" href="#" th:attr="data-id=${alumno.id}">Editar</a>
                 <a class="text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1" th:if="${rol == 'ROLE_ADMIN'}" th:href="@{/administrador/eliminar-alumno/{id}(id=${alumno.id})}">Eliminar</a>
 
                 <div th:if="${rol == 'ROLE_ADMIN' or rol == 'ROLE_PROFESOR'}">
-                    <a class="text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1" href="#" th:attr="data-id=${alumno.id},data-rol=${rol}">Agregar Registro de vida</a>
+                    <a class="text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1 agregar-registro" href="#" th:attr="data-id=${alumno.id},data-rol=${rol}">Agregar Registro de vida</a>
                 </div>
 
-                <a class="py-2 px-4 my-2 text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1" th:if="${rol == 'ROLE_ADMIN' or rol == 'ROLE_PROFESOR' or rol == 'ROLE_APODERADO'}" href="#" th:attr="data-id=${alumno.id}">Ver Registro de vida</a>
-
-                <div th:if="${rol == 'ROLE_ADMIN' or rol == 'ROLE_PROFESOR'}">
-                    <a class="text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1" href="#" th:attr="data-id=${alumno.id},data-rol=${rol}">Agregar Nota</a>
-                </div>
-            </td>
+                <a class="py-2 px-4 my-2 text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1 ver-registro" th:if="${rol == 'ROLE_ADMIN' or rol == 'ROLE_PROFESOR' or rol == 'ROLE_APODERADO'}"  th:attr="data-id=${alumno.id}">Ver Registro de vida</a>
+                <a class="py-2 px-4 my-2 text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1 ver-nota" th:if="${rol == 'ROLE_ADMIN' or rol == 'ROLE_PROFESOR' or rol == 'ROLE_APODERADO'}"  th:attr="data-id=${alumno.id}">Ver Notas
+                    <a class="text-blue-300 hover:text-blue-600 underline rounded cursor-pointer px-1 agregar-nota" th:if="${rol == 'ROLE_ADMIN' or rol == 'ROLE_PROFESOR'}" th:attr="data-id=${alumno.id},data-rol=${rol}">Agregar Nota</a>
         </tr>
         </tbody>
     </table>
