--- a/src/main/resources/templates/administrador-menu.html
+++ b/src/main/resources/templates/administrador-menu.html
@@ -23,6 +23,7 @@
             <button onclick="nuevoProfesor()" class="w-full py-2 px-4 my-2 bg-green-700 hover:bg-green-800 text-white text-lg text-shadow rounded">Contratar Profesores</button>
             <button onclick="listarProfesor()" class="w-full py-2 px-4 my-2 bg-green-700 hover:bg-green-800 text-white text-lg text-shadow rounded">Listar Profesores</button>
             <button onclick="asociarAlumnoApoderado()" class="w-full py-2 px-4 my-2 bg-green-700 hover:bg-green-800 text-white text-lg text-shadow rounded">Asociar Alumno a Apoderado</button>
+            <button onclick="verAsociaciones()" class="w-full py-2 px-4 my-2 bg-green-700 hover:bg-green-800 text-white text-lg text-shadow rounded">Ver Asociaciones Alumno-Apoderado</button>
         </div>
         <button class="w-full py-2 px-4 bg-red-600 hover:bg-red-700 text-white text-lg mt-4 text-shadow rounded"  onclick="logout()">Cerrar sesión</button>
     </div>
@@ -283,6 +284,17 @@
     function verNotas(id) {
         var xhr = new XMLHttpRequest();
         xhr.open('GET', '/administrador/ver-notas/' + id, true);
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState == 4 && xhr.status == 200) {
+                document.getElementById('content').innerHTML = xhr.responseText;
+            }
+        };
+        xhr.send();
+    }
+
+    function verAsociaciones() {
+        var xhr = new XMLHttpRequest();
+        xhr.open('GET', '/administrador/ver-asociaciones', true);
         xhr.onreadystatechange = function () {
             if (xhr.readyState == 4 && xhr.status == 200) {
                 document.getElementById('content').innerHTML = xhr.responseText;
