--- a/src/main/resources/templates/nuevo-profesor.html
+++ b/src/main/resources/templates/nuevo-profesor.html
@@ -3,12 +3,14 @@
 <head>
     <title>Agregar Nuevo Profesor</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-
 </head>
 <body>
 <div class="w-full bg-yellow-700 p-5 flex flex-col justify-between text-yellow-400 rounded">
     <h1 class="text-2xl font-bold">Agregar Nuevo Profesor</h1>
     <form th:action="@{/administrador/profesores/guardar}" th:object="${profesor}" method="post">
+        <div th:if="${error}">
+            <p class="text-red-500" th:text="${error}"></p>
+        </div>
         <label class="text-xl" for="nombre">Nombre:</label>
         <input class="text-black rounded px-1 focus:outline-none" type="text" id="nombre" th:field="*{nombre}" />
         <br/>
@@ -24,6 +26,5 @@
         <button class="py-2 px-4 my-2 bg-green-700 hover:bg-green-800 text-2xl rounded" type="submit">Agregar Profesor</button>
     </form>
 </div>
-
 </body>
 </html>
