--- a/src/main/resources/templates/ver-anotaciones.html
+++ b/src/main/resources/templates/ver-anotaciones.html
@@ -11,7 +11,7 @@
     <ul class="space-y-4">
         <li th:each="anotacion : ${anotaciones}" class="flex justify-between items-center bg-gray-200 p-4 rounded">
             <span th:text="${anotacion.texto}" class="text-xl"></span>
-            <div class="flex space-x-4">
+            <div class="flex space-x-4" th:if="${rol == 'ROLE_ADMIN'}" >
                 <a th:href="@{/administrador/editar-anotacion/{id}(id=${anotacion.id})}" class="text-blue-600 hover:text-blue-800">Editar</a>
                 <a th:href="@{/administrador/eliminar-anotacion/{id}(id=${anotacion.id})}" class="text-red-600 hover:text-red-800">Eliminar</a>
             </div>
