--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -20,9 +20,7 @@
                     <h2>Iniciar Sesión</h2>
                     <input type="text" placeholder="Rut" name="username" id="username" required>
                     <input type="password" placeholder="Contraseña" name="password" id="password" required>
-                    <button type="submit" name="role" value="apoderado">Ingresar como apoderado</button>
-                    <button type="submit" name="role" value="profesor">Ingresar como Profesor</button>
-                    <button type="submit" name="role" value="administrador">Ingresar como Administrador</button>
+                    <button type="submit">Ingresar</button>
                 </form>
             </div>
         </div>
