--- a/src/main/resources/templates/nuevo-profesor.html
+++ b/src/main/resources/templates/nuevo-profesor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Nuevo Apoderado</title>
+    <title>Agregar Nuevo Profesor</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
         .text-shadow {
@@ -11,8 +11,8 @@
 </head>
 <body>
 <div class="w-full bg-yellow-700 p-5 flex flex-col justify-between text-yellow-400 rounded">
-    <h1 class="text-2xl font-bold">Agregar Nuevo Apoderado</h1>
-    <form th:action="@{/administrador/apoderados/guardar}" th:object="${apoderado}" method="post">
+    <h1 class="text-2xl font-bold">Agregar Nuevo Profesor</h1>
+    <form th:action="@{/administrador/profesores/guardar}" th:object="${profesor}" method="post">
         <div th:if="${error}">
             <p class="text-red-500" th:text="${error}"></p>
         </div>
@@ -23,13 +23,13 @@
         <input class="text-black rounded px-1 focus:outline-none" type="text" id="apellido" th:field="*{apellido}" />
         <br/>
         <label class="text-xl" for="rut">RUT:</label>
-        <input class="text-black rounded px-1 focus:outline-none" type="text" id="rut" th:field="*{rut}" oninput="validarRUT(this)"/>
+        <input class="text-black rounded px-1 focus:outline-none" type="text" id="rut" th:field="*{rut}" oninput="validarRUT(this)" />
         <span id="mensaje" class="text-sm font-bold text-shadow"></span>
         <br/>
         <label class="text-xl" for="telefono">Fono:</label>
         <input class="text-black rounded px-1 focus:outline-none" type="text" id="telefono" th:field="*{telefono}" />
         <br/>
-        <button id="guardar" class="py-2 px-4 my-2 bg-green-700 hover:bg-green-800 text-2xl rounded disabled:hover:bg-gray-400 disabled:bg-gray-400 disabled:cursor-not-allowed" type="submit">Guardar</button>
+        <button id="guardar" class="py-2 px-4 my-2 bg-green-700 hover:bg-green-800 text-2xl rounded disabled:bg-gray-400 disabled:cursor-not-allowed" type="submit">Guardar</button>
     </form>
 </div>
 <script>
